# internal/models/user.go
@@ -3,6 +3,10 @@ package models
 type User struct {
 	ID           int    `json:"id"`
 	Email        string `json:"email"`
+	FirstName    string `json:"first_name"`
+	LastName     string `json:"last_name"`
+	PhoneNumber  string `json:"phone_number"`
+	CountryCode  string `json:"country_code"`
 	PasswordHash string `json:"-"`
 }
 
@@ -12,9 +16,18 @@ type AuthResponse struct {
 	Token string `json:"token"`
 }
 
-type AuthRequest struct {
+type RegisterRequest struct {
+	Email       string `json:"email" binding:"required,email"`
+	Password    string `json:"password" binding:"required,min=6"`
+	FirstName   string `json:"first_name" binding:"required"`
+	LastName    string `json:"last_name" binding:"required"`
+	PhoneNumber string `json:"phone_number" binding:"required"`
+	CountryCode string `json:"country_code" binding:"required"`
+}
+
+type LoginRequest struct {
 	Email    string `json:"email" binding:"required,email"`
-	Password string `json:"password" binding:"required,min=6"`
+	Password string `json:"password" binding:"required"`
 }
 
 type UserProfile struct {
